Add Retry & Back-Off logic to VS Expansion (#642)
* Add Retry & Back-Off logic to VS Expansion

* Apply spotless

* Refactor

* Refactor to use ScheduledExecutionService - Exception Handling WIP

* Refactor to use CompletableFuture

* Add statements for test coverage

* Remove unnecessary service

* Move retry into client

* cleanup

* sonar

* cleanup

* add tests

* Add TerminologyServerExpansionException & increase delay for each expansion attempt

* Make exception public and update test

---------

Co-authored-by: Brenin Rhodes <brenin.rhodes@smiledigitalhealth.com>